open api getFavorites added
