# src/main/java/be/howest/ti/mars/webserver/WebServer.java
@@ -136,6 +136,7 @@ public class WebServer extends AbstractVerticle {
         addRouteWithCtxFunction(factory, "getSeeds", bridge::getSeeds);
         addRouteWithCtxFunction(factory, "getPlants", bridge::getPlants);
         addRouteWithCtxFunction(factory, "addProductToFavorite", bridge::addProductToFavorite);
+        addRouteWithCtxFunction(factory, "getFavorites", bridge::getFavorites);
     }
 
     private void addRouteWithCtxFunction(OpenAPI3RouterFactory factory, String operationId,
